--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			document.getElementById('footer-image-div').style.height = document.getElementById('footer-image').clientHeight+'px';
 			document.getElementById('footer-image-div').style.marginTop = ((document.getElementById('footer-3').offsetHeight - document.getElementById('footer-image').clientHeight)/2)+'px';
 
-			if(window.innerHeight<830 || window.innerWidth>=900)
+			if(window.innerHeight<830 && window.innerWidth>=900)
 			{
 				document.getElementById('banner').style.height = window.innerHeight+'px';
 			}
