--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 				<li><a class="navbar-item" href="contact"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
-		<div class="banner-content boom-mt">
+		<div class="banner-content boom-mt boom-opacity">
 			<h1 class="banner-title pt-5 text-white">
 				Corrugated Boxes Tailored to your Needs!
 			</h1>
