--- a/about.html
+++ b/about.html
@@ -180,6 +180,26 @@
 				}
 		}
 
+		function boom()
+		{
+			var opacity = document.getElementsByClassName('boom-opacity');
+			for(var i=0;i<opacity.length;i++)
+			{
+				if(window.scrollY+((9.5*window.innerHeight)/10)>opacity[i].offsetTop)
+				{
+					opacity[i].style.opacity = '1';
+				}
+			}
+			var mt = document.getElementsByClassName('boom-mt');
+			for(var i=0;i<mt.length;i++)
+			{
+				if(window.innerHeight>(mt[i].getBoundingClientRect().top)+window.innerHeight-600)
+				{
+					mt[i].style.marginTop = '0';
+				}
+			}
+		}
+
 		function slidein()
 		{
 			document.getElementById('thank-pop').style.display = 'none';
@@ -300,12 +320,12 @@
 
 
 <footer class="footer" id="full-footer">
-	<div class="main-footer  pt-3">
+	<div class="main-footer pt-3">
 		<div class="container">
 			<div class="row">
 
 
-				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt">
 					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-center text-sm-left mb-2 mb-sm-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
@@ -338,7 +358,7 @@
 
 
 
-				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt">
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
@@ -443,6 +463,8 @@
 
 		navchange();
 
+		boom();
+
 		contact_vis();
 
 	}
@@ -473,6 +495,7 @@
 		}, 350);
 
 		contact_vis();
+		boom();
 	}
 
 
