--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 			var mt = document.getElementsByClassName('boom-mt');
 			for(var i=0;i<mt.length;i++)
 			{
-				if(window.innerHeight>(mt[i].getBoundingClientRect().top)+window.innerHeight-500)
+				if(window.innerHeight>(mt[i].getBoundingClientRect().top)+window.innerHeight-600)
 				{
 					mt[i].style.marginTop = '0';
 				}
@@ -547,12 +547,12 @@
 
 
 <footer class="footer" id="full-footer">
-	<div class="main-footer  pt-3">
+	<div class="main-footer pt-3">
 		<div class="container">
 			<div class="row">
 
 
-				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt">
 					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-center text-sm-left mb-2 mb-sm-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
@@ -585,7 +585,7 @@
 
 
 
-				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt">
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
