--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 			<div class="row">
 
 
-				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt">
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt boom-opacity">
 					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-center text-sm-left mb-2 mb-sm-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
@@ -599,7 +599,7 @@
 
 
 
-				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt">
+				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt boom-opacity">
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
 						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
