footer done to left

--- a/about.html
+++ b/about.html
@@ -340,54 +340,54 @@
 
 
 				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt boom-opacity">
-					<div class="ml-sm-3 ml-lg-0 ml-0 text-sm-left text-center text-sm-left mb-2 mb-sm-3 footer-head"><b>Services</b></div>
+					<div class="ml-sm-3 ml-lg-0 ml-0 text-left mb-2 mb-sm-3 footer-head"><b>Services</b></div>
 					<div class="row footer-data">
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
 					</div>
-					<div class="row footer-data">
-						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Exports</div>
+					<div class="row footer-data px-3">
+						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Exports</div>
 					</div>
-					<div class="row footer-data">
-						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Consumer Goods</div>
+					<div class="row footer-data px-3">
+						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 mb-2 mb-md-0 pl-0 text-left">Consumer Goods</div>
 					</div>
-					<div class="row footer-data">
-						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Fisheries</div>
+					<div class="row footer-data px-3">
+						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Fisheries</div>
 					</div>
-					<div class="row footer-data">
-						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Food industry</div>
+					<div class="row footer-data px-3">
+						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Food industry</div>
 					</div>
-					<div class="row footer-data">
-						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Oil/Edible Oil</div>
+					<div class="row footer-data px-3">
+						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Oil/Edible Oil</div>
 					</div>
-					<div class="row footer-data">
-						<div class="col-sm-1 col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-sm-left text-center">Agro-chemical Industry</div>
+					<div class="row footer-data px-3">
+						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
+						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Agro-chemical Industry</div>
 					</div>
 				</div>
 
 
 
 				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4 boom-mt boom-opacity">
-					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
+					<div class="ml-sm-3 ml-0 mb-3 footer-head text-left"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="far fa-id-card"></i></div>
+						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="far fa-id-card"></i></div>
 						<div class="col-sm-10 col-9 mb-2">Name Surname<br>Name Surname</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-mobile-alt"></i></div>
+						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="fas fa-mobile-alt"></i></div>
 						<div class="col-sm-10 col-9 mb-2">9999999999<br>9999999999</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="far fa-envelope"></i></div>
+						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="far fa-envelope"></i></div>
 						<div class="col-sm-10 col-9 mb-2">email.email.com</div>
 					</div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></i></div>
+						<div class="col-sm-2 col-1 text-sm-right text-left"><i class="fas fa-store-alt"></i></i></div>
 						<div class="col-sm-10 col-9 mb-2 footer-address">Address..., Address..., Address...,<br>Address..., Address..., Address...</div>
 					</div>
 					<div class="text-center text-md-left pb-2 pl-md-5">
