--- a/about.html
+++ b/about.html
@@ -514,6 +514,7 @@
 
 
 	window.onload = function() {
+		document.getElementById('check').checked=false;
 		page_height();
 		boom();
 		setTimeout(function() {page_height();console.log(1);}, 2200);
