--- a/contact.html
+++ b/contact.html
@@ -352,6 +352,7 @@
 
 
 	window.onload = function() {
+		document.getElementById('check').checked=false;
 		page_height();
 		setTimeout(function() {page_height();}, 2200);
 	};
