--- a/index.html
+++ b/index.html
@@ -766,6 +766,7 @@
 
 
 	window.onload = function() {
+		document.getElementById('check').checked=false;
 		page_height();
 		boom();
 		setTimeout(function() {page_height();}, 2200);
