--- a/services.html
+++ b/services.html
@@ -758,6 +758,7 @@
 
 
 	window.onload = function() {
+		document.getElementById('check').checked=false;
 		page_height();
 		boom();
 		setTimeout(function() {page_height();}, 2200);
