--- a/about.html
+++ b/about.html
@@ -348,7 +348,7 @@
 
 
 
-<div class="container py-5">
+<div class="container py-5" onload="boom();">
 	<div class="row">
 		<div class="col-12 col-md-7 col-lg-8 pb-4 pb-md-0">
 			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity">
