--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 </head>
 <body>
 
-	<div class="banner" id="banner">
+	<div class="banner" id="banner" onload="boom();">
 
 		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
