--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
 		setTimeout(function() {
 			page_height();
 			document.getElementById('check').checked=false;
-			alert('message?: DOMString');
+			black();
 		}, 2200);
 	};
 
