--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,10 @@
 
 
 	<script type="text/javascript">
-
+		var no_of_click = 0;
 
 		function black(){
+			no_of_click++;
 			if(document.getElementById('check').checked)
 			{
 				document.getElementById('nav').style.background = '#fff';
@@ -320,6 +321,8 @@
 		}
 	}
 
+
+
 	window.onscroll = function() {
 
 		navchange();
@@ -350,11 +353,19 @@
 
 	}
 
+	boom();
+
 
 	window.onload = function() {
 		document.getElementById('check').checked=false;
 		page_height();
-		setTimeout(function() {page_height();}, 2200);
+		setTimeout(function() {
+			if(document.getElementById('check').checked && no_of_click==0)
+			{
+				document.getElementById('check').checked=false;
+			}
+			page_height();
+		}, 2200);
 	};
 
 		
