--- a/about.html
+++ b/about.html
@@ -401,7 +401,7 @@
 				<footer class="blockquote-footer">Delhi, <cite title="Source Title">2004</cite></footer>
 			</blockquote>
 			<blockquote class="blockquote mb-0 text-center">
-				<p class="mb-0 boom-mt boom-opacity">“M/s Prerana Enterprises receives a Best Small Scale Industry Award from Disstrict Industry Centre for 2004”</p>
+				<p class="mb-0 boom-mt boom-opacity">“M/s Prerana Enterprises receives a Best Small Scale Industry Award from District Industry Centre for 2004”</p>
 				<footer class="blockquote-footer">Ratnagiri, <cite title="Source Title">2004</cite></footer>
 			</blockquote>
 		</div>
