--- a/services.html
+++ b/services.html
@@ -210,7 +210,15 @@
 			var opacity = document.getElementsByClassName('boom-opacity');
 			for(var i=0;i<opacity.length;i++)
 			{
-				if(window.scrollY+((9.5*window.innerHeight)/10)>opacity[i].offsetTop)
+				if(window.innerHeight<900)
+				{
+					if(window.scrollY+((9.5*window.innerHeight)/10)>opacity[i].offsetTop)
+					{
+						opacity[i].style.opacity = '1';
+						opacity[i].style.marginTop = '0';
+					}
+				}
+				else
 				{
 					opacity[i].style.opacity = '1';
 				}
@@ -767,12 +775,13 @@
 	window.onload = function() {
 		document.getElementById('check').checked=false;
 		page_height();
-		boom();
+		
 		setTimeout(function() {
 			if(document.getElementById('check').checked && no_of_click==0)
 			{
 				document.getElementById('check').checked=false;
 			}
+			boom();
 			page_height();
 		}, 2200);
 	};
