padding below heading

--- a/services.html
+++ b/services.html
@@ -290,7 +290,7 @@
 </head>
 <body>
 
-	<div class="banner">
+	<div class="banner pb-2">
 
 		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
