--- a/about.html
+++ b/about.html
@@ -292,7 +292,7 @@
 </head>
 <body>
 
-	<div class="banner">
+	<div class="banner pb-2">
 
 		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
