--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 </head>
 <body>
 
-	<div class="banner mb-3">
+	<div class="banner pb-2 mb-3">
 
 		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
