--- a/index.html
+++ b/index.html
@@ -583,28 +583,28 @@
 						<div class="col-12 text-left mb-2">We have expertise in providing corrugated boxes to the following sectors:</div>
 					</div>
 					<div class="row footer-data px-3">
-						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Exports</div>
+						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Exports</div>
 					</div>
 					<div class="row footer-data px-3">
-						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 mb-2 mb-md-0 pl-0 text-left">Consumer Goods</div>
+						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Consumer Goods</div>
 					</div>
 					<div class="row footer-data px-3">
-						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Fisheries</div>
+						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Fisheries</div>
 					</div>
 					<div class="row footer-data px-3">
-						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Food industry</div>
+						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Food industry</div>
 					</div>
 					<div class="row footer-data px-3">
-						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Oil/Edible Oil</div>
+						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Oil/Edible Oil</div>
 					</div>
 					<div class="row footer-data px-3">
-						<div class="col-sm-1 d-none d-sm-block col-auto text-right pr-0 mr-0"></div>
-						<div class="col-sm-11 col-12 mb-2 mb-md-0 pl-0 text-left">Agro-chemical Industry</div>
+						<div class="col-sm-1 d-none col-auto text-right pr-0 mr-0"></div>
+						<div class="col-12 mb-2 mb-md-0 pl-0 text-left">Agro-chemical Industry</div>
 					</div>
 				</div>
 
