--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 	</div>
 
 
-	<h2 class="text-center container subname pb-4 proud-client boom-opacity">Client Testimonials</h2>
+	<h2 class="text-center container subname proud-client boom-opacity">Client Testimonials</h2>
 
 	<div class="container pb-4">
 	    <div id="testimonials" class="carousel slide" data-ride="carousel">
