--- a/index.html
+++ b/index.html
@@ -557,10 +557,10 @@
 	</div>
 
 
-	<h2 class="text-center container subname proud-client boom-opacity">Client Testimonials</h2>
+	<h2 class="text-center container subname proud-client boom-opacity">Client Testimonials<br><i class="fas fa-quote-left testimonial-quotes"></i></h2>
 
 	<div class="container pb-4">
-	    <div id="testimonials" class="carousel slide" data-ride="carousel">
+	    <div id="testimonials" class="carousel slide" data-ride="carousel" data-interval="4000">
 	    	<ol class="carousel-indicators mb-0">
 			    <li data-target="#testimonials" data-slide-to="0" class="active"></li>
 			    <li data-target="#testimonials" data-slide-to="1"></li>
