--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
             <label for="name">Name<span class="form-required"> *</span></label>
             <input type="text" id="name" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Name" autocomplete="off" required></br>
             <label for="number">Mobile Number<span class="form-required"> *</span></label>
-            <input type="tel" id="number" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
+            <input type="tel" pattern="[+987][0-9]{9,12}" id="number" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
         	</br>
             <label for="email">Email Address</label>
             <input type="email" id="email" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Email" autocomplete="off">
