--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
                     <label for="name">Name<span class="form-required"> *</span></label>
                     <input type="text" id="name" class="form-control mt-1" placeholder="Enter Your Name" autocomplete="off" required></br>
                     <label for="number">Mobile Number<span class="form-required"> *</span></label>
-                    <input type="tel" id="number" class="form-control mt-1" placeholder="Enter Your Mobile number" autocomplete="off" required>
+                    <input type="tel" pattern="[+987][0-9]{9,12}" id="number" class="form-control mt-1" placeholder="Enter Your Mobile number" autocomplete="off" required>
                 	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
                 	</br>
                     <label for="email">Email Address</label>
