--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 	<!-- JS, Popper.js, and jQuery -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
@@ -206,6 +206,10 @@
 
 		function slidein()
 		{
+			document.getElementById('name').value = "";
+			document.getElementById('phone').value = "";
+			document.getElementById('email').value = "";
+			document.getElementById('message').value = "";
 			document.getElementById('thank-pop').style.display = 'none';
 			document.getElementById('uni-contact-btn').style.transition = '0.5s';
 			document.getElementById('uni-contact-btn').style.bottom = '-100px';
@@ -225,6 +229,8 @@
 			}
 			var pop_ht = $("#contact-pop").css("height");
 			document.getElementById('thank-pop').style.height = (parseInt(pop_ht, 10)-9)+'px';
+
+			return false;
 		}
 
 		function slideout()
@@ -265,6 +271,68 @@
 					clearInterval(interval);
 				}
 			}, gap);
+		}
+
+		function formSubmit()
+		{
+			document.getElementById('name').setAttribute('readonly', '');
+			document.getElementById('phone').setAttribute('readonly', '');
+			document.getElementById('email').setAttribute('readonly', '');
+			document.getElementById('message').setAttribute('readonly', '');
+			document.getElementById('pop-submit').setAttribute('disabled', '');
+			var name = document.getElementById('name').value;
+			var phone = document.getElementById('phone').value;
+			var email = document.getElementById('email').value;
+			var message = document.getElementById('message').value;
+			if(email=="")
+			{
+				email="null";
+			}
+			document.getElementById('pop-submit').innerHTML = 'Submitting';
+			$.ajax({
+				url: 'https://script.google.com/macros/s/AKfycbwQuyfRu0cKZVXMiDDSuuhXvgQNmT_o1r7UPI7wZCh-DrEnqyo/exec',
+				method: 'GET',
+				dataType: 'jsonp',
+				contentType: 'application/json',
+				crossDomain: true,
+				data: {
+					'name': name,
+					'phone': phone,
+					'email': email,
+					'message': message
+				}
+			});
+			return false;
+		}
+
+		function contact_submit()
+		{
+			document.getElementById('thank-pop').style.display = 'initial';
+			setTimeout(function() {slideout();},5000);
+		}
+
+		function formSuccess()
+		{
+			document.getElementById('thank-pop').innerHTML = '<h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop text-danger" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Thank You</h2><h2 class="text-center pt-md-1 pt-0">for contacting us!</h2><h2 class="text-center pt-md-3 pt-0">We will get back to you on your given contact details!</h2><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile text-danger"><i class="far fa-grin-alt"></i></h2>';
+			contact_submit();
+			document.getElementById('name').removeAttribute('readonly');
+			document.getElementById('phone').removeAttribute('readonly');
+			document.getElementById('email').removeAttribute('readonly');
+			document.getElementById('message').removeAttribute('readonly');
+			document.getElementById('pop-submit').removeAttribute('disabled');
+			document.getElementById('pop-submit').innerHTML = 'Submit';
+		}
+
+		function formError()
+		{
+			document.getElementById('thank-pop').innerHTML = '<h2 class=" subname pt-md-3 pr-md-3 pt-1 pr-1 proud-client text-right close-pop text-danger" onclick="slideout();"><i class="fas fa-times"></i></h2><h2 class="text-center pt-md-3 pt-0">Sorry</h2><h2 class="text-center pt-md-1 pt-0">Request could not be submitted</h2><h3 class="text-center pt-md-3 pt-0"><a href="javascript: void(0)" onclick="return slidein();">Try again</a></h3><h2 class="text-center pt-lg-4 pt-md-2 pt-1 mt-lg-2 mt-0 thank-pop-smile text-danger"><i class="far fa-frown"></i></h2>';
+			document.getElementById('thank-pop').style.display = 'initial';
+			document.getElementById('name').removeAttribute('readonly');
+			document.getElementById('phone').removeAttribute('readonly');
+			document.getElementById('email').removeAttribute('readonly');
+			document.getElementById('message').removeAttribute('readonly');
+			document.getElementById('pop-submit').removeAttribute('disabled');
+			document.getElementById('pop-submit').innerHTML = 'Submit';
 		}
 	</script>
 
@@ -310,15 +378,15 @@
 		<h2 class=" subname pt-2 pb-2 proud-client col-2 text-center close-pop text-danger" onclick="slideout();" id="close-pop"><i class="fas fa-times"></i></h2>
 	</div>
 	
-	<form class="ev_form mt-0 mb-3" autocomplete="off" id="pop-form">
+	<form class="ev_form mt-0 mb-3" autocomplete="off" id="pop-form" action="javascript: void(0)" onsubmit="return formSubmit();">
         <div class="form-group mb-1">
             <div class="form-required-show">
                 <span class="form-required">* is for required.</span>
             </div>
             <label for="name">Name<span class="form-required"> *</span></label>
             <input type="text" id="name" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Name" autocomplete="off" required></br>
-            <label for="number">Mobile Number<span class="form-required"> *</span></label>
-            <input type="tel" pattern="[+987][0-9]{9,12}" id="number" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
+            <label for="phone">Mobile Number<span class="form-required"> *</span></label>
+            <input type="tel" pattern="[+987][0-9]{9,12}" id="phone" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Mobile number" autocomplete="off" required>
         	</br>
             <label for="email">Email Address</label>
             <input type="email" id="email" class="mb-2 mt-lg-1 form-control pop-contact-input" placeholder="Enter Your Email" autocomplete="off">
