--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 	<!-- JS, Popper.js, and jQuery -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
@@ -147,6 +147,68 @@
 				document.getElementById('bars').style.color = "#fff";
 			}
 		}
+
+		function formSubmit()
+		{
+			document.getElementById('name').setAttribute('readonly', '');
+			document.getElementById('phone').setAttribute('readonly', '');
+			document.getElementById('email').setAttribute('readonly', '');
+			document.getElementById('message').setAttribute('readonly', '');
+			document.getElementById('pop-submit').setAttribute('disabled', '');
+			var name = document.getElementById('name').value;
+			var phone = document.getElementById('phone').value;
+			var email = document.getElementById('email').value;
+			var message = document.getElementById('message').value;
+			if(email=="")
+			{
+				email="null";
+			}
+			document.getElementById('pop-submit').innerHTML = 'Submitting';
+			$.ajax({
+				url: 'https://script.google.com/macros/s/AKfycbwQuyfRu0cKZVXMiDDSuuhXvgQNmT_o1r7UPI7wZCh-DrEnqyo/exec',
+				method: 'GET',
+				dataType: 'jsonp',
+				contentType: 'application/json',
+				crossDomain: true,
+				data: {
+					'name': name,
+					'phone': phone,
+					'email': email,
+					'message': message
+				}
+			});
+			return false;
+		}
+
+		function formSuccess()
+		{
+			document.getElementById('name').value = "";
+			document.getElementById('phone').value = "";
+			document.getElementById('email').value = "";
+			document.getElementById('message').value = "";
+			document.getElementById('name').removeAttribute('readonly');
+			document.getElementById('phone').removeAttribute('readonly');
+			document.getElementById('email').removeAttribute('readonly');
+			document.getElementById('message').removeAttribute('readonly');
+			document.getElementById('pop-submit').removeAttribute('disabled');
+			document.getElementById('pop-submit').innerHTML = 'Submit';
+			alert("Submitted Successfully!\nWe will contact you soon.");
+		}
+
+		function formError()
+		{
+			document.getElementById('name').value = "";
+			document.getElementById('phone').value = "";
+			document.getElementById('email').value = "";
+			document.getElementById('message').value = "";
+			document.getElementById('name').removeAttribute('readonly');
+			document.getElementById('phone').removeAttribute('readonly');
+			document.getElementById('email').removeAttribute('readonly');
+			document.getElementById('message').removeAttribute('readonly');
+			document.getElementById('pop-submit').removeAttribute('disabled');
+			document.getElementById('pop-submit').innerHTML = 'Submit';
+			alert("Sorry!\nCould not be submitted. Try again!");
+		}
 	</script>
 
 </head>
@@ -184,15 +246,15 @@
 <div class="container contact-set pt-4">
 	<div class="row">
 		<div class="col-lg-6 col-sm-12">
-			<form class="ev_form" autocomplete="off">
+			<form class="ev_form" autocomplete="off" action="javascript: void(0)" onsubmit="return formSubmit();">
                 <div class="form-group">
                     <div class="form-required-show">
                         <span class="form-required">* is for required.</span>
                     </div>
                     <label for="name">Name<span class="form-required"> *</span></label>
                     <input type="text" id="name" class="form-control mt-1" placeholder="Enter Your Name" autocomplete="off" required></br>
-                    <label for="number">Mobile Number<span class="form-required"> *</span></label>
-                    <input type="tel" pattern="[+987][0-9]{9,12}" id="number" class="form-control mt-1" placeholder="Enter Your Mobile number" autocomplete="off" required>
+                    <label for="phone">Mobile Number<span class="form-required"> *</span></label>
+                    <input type="tel" pattern="[+987][0-9]{9,12}" id="phone" class="form-control mt-1" placeholder="Enter Your Mobile number" autocomplete="off" required>
                 	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
                 	</br>
                     <label for="email">Email Address</label>
@@ -204,7 +266,7 @@
                     <br>
 
 
-                    <button class="btn btn-danger ev_btn " type="submit" name="sub_form">Submit</button>
+                    <button class="btn btn-danger ev_btn" id="pop-submit" type="submit" name="sub_form">Submit</button>
     
 
                 </div>
