--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 			}
 
 			page_height();
+
 		}
 
 
@@ -657,6 +658,33 @@
 
 
 </script>
+
+
+
+
+<div class="container py-4">
+	<h2 class="text-center subname pb-4 proud-client boom-opacity">More About Us</h2>
+	<div class="row">
+		<div class="col-12 col-md-7 col-lg-8 pb-4 pb-md-0">
+			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity">
+				<p class="boom-opacity">Prerana Enterprises is all about <i>corrugation</i>. And for us, it's never <i>just a box</i>. Each box we manufacture is of outstanding quality and eco-friendly!</p><p class="mb-2 boom-opacity">If you are looking for custom-printed corrugated packing material, this is the precise place. We manufacture content-protecting, brand-enhancing, sustainable packaging boxes that will help your products to stand-out and get noticed thus increasing your sale. Our boxes offer sustainability and reliability helping you sell more and worry less.</p>
+				<p class="mb-2 boom-opacity">Since its founding at Goregaon (Mumbai) in 1985 and later moving to Dapoli in 1998 for expansion purpose, Prerana Enterprises has developed exponentially to become a leading supplier of Corrugated Boxes (Paper Board Cartons), in Ratnagiri, Raigad, Panvel and Navi Mumbai.</p>
+			</div>
+			
+			<div class="row">
+				<div class="col-6">
+					<div class="exp-before py-md-4 py-3 text-dark"><div class="w-auto float-left exp-digit">25</div><div class="w-auto exp-text">Years<br>Exp.</div></div>
+				</div>
+				<div class="col-6">
+					<div class="mr-sm-5 py-md-4 py-3 text-right"><a href="about" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 col-md-5 col-lg-4 boom-opacity">
+			<div class="about-pic-div"><img src="images/sky_spare.jpg" class="img-fluid"></div>
+		</div>
+	</div>
+</div>
 
 
 <!--
