--- a/index.html
+++ b/index.html
@@ -672,11 +672,11 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-6">
-					<div class="exp-before py-md-4 py-3 text-dark"><div class="w-auto float-left exp-digit">25</div><div class="w-auto exp-text">Years<br>Exp.</div></div>
+				<div class="col-7">
+					<div class="exp-before py-md-4 py-3 text-dark"><div class="w-auto float-left exp-digit">25</div><div class="w-auto exp-text">Years<br>Experience</div></div>
 				</div>
-				<div class="col-6">
-					<div class="mr-sm-5 py-md-4 py-3 text-right"><a href="about" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
+				<div class="col-5">
+					<div class="py-4 text-right"><a href="about" class="btn btn-dark">More About Us!</a></div>
 				</div>
 			</div>
 		</div>
